[gd_scene load_steps=38 format=3 uid="uid://c0llhjtw2hpub"]

[ext_resource type="Script" uid="uid://cfxwoa5ciesqk" path="res://Scenes/main_scene.gd" id="1_6ev3c"]
[ext_resource type="PackedScene" uid="uid://d1jp78oc1nkgs" path="res://Scenes/see_saw.tscn" id="1_52fb6"]
[ext_resource type="Script" uid="uid://bjpv1wb5abyxo" path="res://Scenes/spawner.gd" id="2_6l7je"]
[ext_resource type="Script" uid="uid://clb234uy21687" path="res://Scenes/difficulty_rule.gd" id="2_maf8m"]
[ext_resource type="Script" uid="uid://cdasm4u1ektxg" path="res://Scenes/score_area.gd" id="3_jv6wh"]
[ext_resource type="Shader" uid="uid://clgtnwun0iv48" path="res://Scenes/receptacle_area.gdshader" id="4_iacmt"]
[ext_resource type="Texture2D" uid="uid://dviw7ke7xm822" path="res://icon.svg" id="5_6ev3c"]
[ext_resource type="Script" uid="uid://bm4kg1i6o14pu" path="res://Scenes/indicator.gd" id="8_huasi"]
[ext_resource type="Shader" uid="uid://hxv5wls3kwk4" path="res://Scenes/ScrollBG.gdshader" id="8_mai8y"]
[ext_resource type="Texture2D" uid="uid://dp843gjs58y10" path="res://Sprites/MainBG.png" id="9_7ewk0"]
[ext_resource type="SpriteFrames" uid="uid://dhbxnpij8bbw0" path="res://Sprites/RobotUI.tres" id="10_gnsmo"]
[ext_resource type="Texture2D" uid="uid://ds7sjrgkj0u8s" path="res://Sprites/BoxContainers3.png" id="11_7ewk0"]
[ext_resource type="Texture2D" uid="uid://dae2o71xyhgmi" path="res://Sprites/BoxContainers1.png" id="11_76v2p"]
[ext_resource type="Texture2D" uid="uid://bj31snwluwehq" path="res://Sprites/BoxContainers2.png" id="12_drdnd"]
[ext_resource type="LabelSettings" uid="uid://d0jh4ordcmf4p" path="res://Scenes/MainTextUI.tres" id="12_gnsmo"]
[ext_resource type="Texture2D" uid="uid://df25p8rhb3mjt" path="res://Sprites/BoxContainers4.png" id="12_lhp3t"]
[ext_resource type="LabelSettings" uid="uid://caisc2nmol4lm" path="res://Scenes/ScoreText.tres" id="12_psl12"]

[sub_resource type="Resource" id="Resource_huasi"]
script = ExtResource("2_maf8m")
score_requirement = 0
fall_speed = 5.0
spawn_timer = 2.0
metadata/_custom_type_script = "uid://clb234uy21687"

[sub_resource type="Resource" id="Resource_m1efj"]
script = ExtResource("2_maf8m")
score_requirement = 10
fall_speed = 5.5
spawn_timer = 1.75
metadata/_custom_type_script = "uid://clb234uy21687"

[sub_resource type="Resource" id="Resource_mai8y"]
script = ExtResource("2_maf8m")
score_requirement = 20
fall_speed = 6.0
spawn_timer = 1.5
metadata/_custom_type_script = "uid://clb234uy21687"

[sub_resource type="Resource" id="Resource_76v2p"]
script = ExtResource("2_maf8m")
score_requirement = 30
fall_speed = 7.0
spawn_timer = 1.3
metadata/_custom_type_script = "uid://clb234uy21687"

[sub_resource type="Resource" id="Resource_drdnd"]
script = ExtResource("2_maf8m")
score_requirement = 45
fall_speed = 8.0
spawn_timer = 1.1
metadata/_custom_type_script = "uid://clb234uy21687"

[sub_resource type="Resource" id="Resource_ioaeq"]
script = ExtResource("2_maf8m")
score_requirement = 60
fall_speed = 9.0
spawn_timer = 1.0
metadata/_custom_type_script = "uid://clb234uy21687"

[sub_resource type="Resource" id="Resource_7ewk0"]
script = ExtResource("2_maf8m")
score_requirement = 75
fall_speed = 10.0
spawn_timer = 0.9
metadata/_custom_type_script = "uid://clb234uy21687"

[sub_resource type="Resource" id="Resource_lhp3t"]
script = ExtResource("2_maf8m")
score_requirement = 100
fall_speed = 11.0
spawn_timer = 0.85
metadata/_custom_type_script = "uid://clb234uy21687"

[sub_resource type="Resource" id="Resource_gnsmo"]
script = ExtResource("2_maf8m")
score_requirement = 125
fall_speed = 12.0
spawn_timer = 0.8
metadata/_custom_type_script = "uid://clb234uy21687"

[sub_resource type="Resource" id="Resource_maf8m"]
script = ExtResource("2_maf8m")
score_requirement = 150
fall_speed = 13.0
spawn_timer = 0.75
metadata/_custom_type_script = "uid://clb234uy21687"

[sub_resource type="Resource" id="Resource_psl12"]
script = ExtResource("2_maf8m")
score_requirement = 175
fall_speed = 14.0
spawn_timer = 0.7
metadata/_custom_type_script = "uid://clb234uy21687"

[sub_resource type="Resource" id="Resource_2ebs2"]
script = ExtResource("2_maf8m")
score_requirement = 200
fall_speed = 15.0
spawn_timer = 0.65
metadata/_custom_type_script = "uid://clb234uy21687"

[sub_resource type="Resource" id="Resource_oyb3p"]
script = ExtResource("2_maf8m")
score_requirement = 250
fall_speed = 16.0
spawn_timer = 0.6
metadata/_custom_type_script = "uid://clb234uy21687"

[sub_resource type="Resource" id="Resource_jvnna"]
script = ExtResource("2_maf8m")
score_requirement = 300
fall_speed = 17.0
spawn_timer = 0.57
metadata/_custom_type_script = "uid://clb234uy21687"

[sub_resource type="Resource" id="Resource_b48ew"]
script = ExtResource("2_maf8m")
score_requirement = 350
fall_speed = 18.0
spawn_timer = 0.55
metadata/_custom_type_script = "uid://clb234uy21687"

[sub_resource type="Resource" id="Resource_8edxt"]
script = ExtResource("2_maf8m")
score_requirement = 400
fall_speed = 20.0
spawn_timer = 0.5
metadata/_custom_type_script = "uid://clb234uy21687"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jv6wh"]
size = Vector2(1152, 66)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_maf8m"]
shader = ExtResource("4_iacmt")
shader_parameter/color = Color(1, 0.6, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_huasi"]
shader = ExtResource("4_iacmt")
shader_parameter/color = Color(0.508738, 0.888349, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_drdnd"]
shader = ExtResource("8_mai8y")
shader_parameter/SpeedX = 0.05
shader_parameter/SpeedY = 0.0

[node name="MainScene" type="Node2D" node_paths=PackedStringArray("score_label", "lives_label")]
script = ExtResource("1_6ev3c")
score_label = NodePath("UILayer/UIRoot/ScoreLabel")
lives_label = NodePath("UILayer/UIRoot/LivesLabel")
difficulties = Array[ExtResource("2_maf8m")]([SubResource("Resource_huasi"), SubResource("Resource_m1efj"), SubResource("Resource_mai8y"), SubResource("Resource_76v2p"), SubResource("Resource_drdnd"), SubResource("Resource_ioaeq"), SubResource("Resource_7ewk0"), SubResource("Resource_lhp3t"), SubResource("Resource_gnsmo"), SubResource("Resource_maf8m"), SubResource("Resource_psl12"), SubResource("Resource_2ebs2"), SubResource("Resource_oyb3p"), SubResource("Resource_jvnna"), SubResource("Resource_b48ew"), SubResource("Resource_8edxt")])

[node name="SeeSaw" parent="." instance=ExtResource("1_52fb6")]

[node name="Spawner" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -512)
script = ExtResource("2_6l7je")

[node name="PinkArea" type="Area2D" parent="." node_paths=PackedStringArray("scene_manager")]
script = ExtResource("3_jv6wh")
scene_manager = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PinkArea"]
position = Vector2(-768, 288)
shape = SubResource("RectangleShape2D_jv6wh")
debug_color = Color(0.843059, 0.00106504, 0.91619, 0.42)

[node name="PinkIcon" type="Sprite2D" parent="."]
z_index = 10
material = SubResource("ShaderMaterial_maf8m")
position = Vector2(-408, 32)
scale = Vector2(4.875, 4)
texture = ExtResource("5_6ev3c")

[node name="GreenArea" type="Area2D" parent="." node_paths=PackedStringArray("scene_manager")]
script = ExtResource("3_jv6wh")
preferred_color = 1
scene_manager = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GreenArea"]
position = Vector2(768, 288)
shape = SubResource("RectangleShape2D_jv6wh")
debug_color = Color(0, 0.639226, 0.367686, 0.42)

[node name="GreenIcon" type="Sprite2D" parent="."]
z_index = 10
material = SubResource("ShaderMaterial_huasi")
position = Vector2(408, 32)
scale = Vector2(4.75, 4)
texture = ExtResource("5_6ev3c")

[node name="BadArea" type="Area2D" parent="." node_paths=PackedStringArray("scene_manager")]
script = ExtResource("3_jv6wh")
preferred_color = 2
scene_manager = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BadArea"]
position = Vector2(0, 352)
shape = SubResource("RectangleShape2D_jv6wh")
debug_color = Color(0.956863, 0, 0, 0.419608)

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.695503, 0.695503, 0.695503, 1)
z_index = -300
z_as_relative = false
material = SubResource("ShaderMaterial_drdnd")
offset_left = -910.0
offset_top = -640.0
offset_right = 114.0
offset_bottom = 384.0
scale = Vector2(2, 2)
texture = ExtResource("9_7ewk0")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="RobotUI" type="AnimatedSprite2D" parent="UILayer"]
position = Vector2(44, 48)
scale = Vector2(3, 3)
sprite_frames = ExtResource("10_gnsmo")
frame = 5
frame_progress = 1.0

[node name="BGLayer" type="CanvasLayer" parent="UILayer"]

[node name="Indicator" type="ColorRect" parent="UILayer/BGLayer"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -504.0
offset_top = 16.0
offset_right = -346.0
offset_bottom = -505.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.13439
color = Color(0, 0, 0, 1)
script = ExtResource("8_huasi")
metadata/_edit_lock_ = true

[node name="Indicator2" type="ColorRect" parent="UILayer/BGLayer"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 689.0
offset_top = -539.0
offset_right = 847.0
offset_bottom = -1039.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.748746
color = Color(0, 0, 0, 1)
script = ExtResource("8_huasi")

[node name="UIRoot" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="ScoreLabel" type="Label" parent="UILayer/UIRoot"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 504.0
offset_right = 544.0
offset_bottom = 91.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "0"
label_settings = ExtResource("12_psl12")
horizontal_alignment = 2
vertical_alignment = 1

[node name="LivesLabel" type="Label" parent="UILayer/UIRoot"]
layout_mode = 1
offset_left = 92.0
offset_right = 143.0
offset_bottom = 91.0
theme_override_font_sizes/font_size = 32
text = "3"
label_settings = ExtResource("12_gnsmo")

[node name="GameOverOverlay" type="ColorRect" parent="UILayer/UIRoot"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="GameOverLabel" type="Label" parent="UILayer/UIRoot/GameOverOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -92.0
offset_right = 47.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "Fim de Jogo!"
label_settings = ExtResource("12_gnsmo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverScoreLabel" type="Label" parent="UILayer/UIRoot/GameOverOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.0
offset_top = -36.0
offset_right = 107.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Pontos: 0"
label_settings = ExtResource("12_gnsmo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverScoreLabel" type="Label" parent="UILayer/UIRoot/GameOverOverlay/GameOverScoreLabel"]
layout_mode = 1
offset_left = -109.0
offset_top = 84.0
offset_right = 779.0
offset_bottom = 175.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 36
text = "Pressione Espaço para tentar novamente!"
label_settings = ExtResource("12_gnsmo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoxContainers" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="BoxContainers3" type="Sprite2D" parent="BoxContainers"]
z_index = -1
position = Vector2(408, 168)
scale = Vector2(7, 7)
texture = ExtResource("11_7ewk0")
metadata/_edit_lock_ = true

[node name="BoxContainers4" type="Sprite2D" parent="BoxContainers"]
position = Vector2(408, 168)
scale = Vector2(7, 7)
texture = ExtResource("12_lhp3t")
metadata/_edit_lock_ = true

[node name="BoxContainers1" type="Sprite2D" parent="BoxContainers"]
z_index = -1
position = Vector2(-408, 168)
scale = Vector2(7, 7)
texture = ExtResource("11_76v2p")
metadata/_edit_lock_ = true

[node name="BoxContainers2" type="Sprite2D" parent="BoxContainers"]
position = Vector2(-408, 168)
scale = Vector2(7, 7)
texture = ExtResource("12_drdnd")
metadata/_edit_lock_ = true

[connection signal="died" from="." to="Spawner" method="_on_main_scene_died"]
[connection signal="game_over" from="Spawner" to="." method="_on_spawner_game_over"]
[connection signal="frame_changed" from="UILayer/RobotUI" to="." method="_on_robot_ui_frame_changed"]
